<resources>
    <string name="app_name">Prototipos_de_Tela</string>
    <string name="butao_entrar">Entrar</string>
    <string name="Titulo_Login">Login</string>
    <string name="_00_00">00:00</string>
    <string name="agendamento">Agendamento</string>
    <string name="tipo_de_lavagem">Tipo de Lavagem</string>
    <string name="selecione_um_tipo">Selecione um tipo</string>
    <string name="tamanho_do_carro">Tamanho do Carro</string>
    <string name="hor_rio">Horário</string>
    <string name="data">Data</string>
    <string name="dd_mm_aa">dd/mm/aa</string>
    <string name="localiza_o">Localização</string>
    <string name="selecione_o_lava_jato">Selecione o Lava-Jato</string>
    <string name="total_previsto">Total Previsto</string>
    <string name="avan_ar">Avançar</string>
    <string name="r_00_00">R$ 00,00</string>
    <string name="bot_o_de_voltar">Botão de Voltar</string>
</resources>